--- a/views/home.html
+++ b/views/home.html
@@ -12,14 +12,16 @@
     <header>
         <section>
             <a href="#"><img src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre"></a>
+            <div class="header__search">
             <form action="">
                 <input type="text" placeholder="Buscar" id="search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
+        </div>
             <i class="fa-solid fa-hand-holding-dollar"></i>
             <p>Comprá en cuotas y sin tarjeta de crédito</p>
         </section>
-        <nav>
+        <nav class="home__nav">
             <ul>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
@@ -27,14 +29,14 @@
                 <li><a href="">Ayuda</a></li>
             </ul>
         </nav>
-        <nav>
-            <ul>
+        <nav class="home__nav">
+            <ul class="home__login">
                 <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
                 <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
-        <div class="burger-menu">
+        <div class="burger__menu">
             <i class="fas fa-bars"></i>
         </div>
     </header>
