--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,10 +17,11 @@
                 <input type="text" placeholder="Buscar" id="search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
-            <i class="fa-solid fa-hand-holding-dollar"></i>
-            <p>Comprá en cuotas y sin tarjeta de crédito</p>
+            <div class="header__section_icon"><i class="fa-solid fa-hand-holding-dollar"></i>
+                <p>Comprá en cuotas y sin tarjeta de crédito</p>
+            </div>
         </section>
-        <nav>
+        <nav class="home__nav">
             <ul>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
@@ -27,7 +29,7 @@
                 <li><a href="">Ayuda</a></li>
             </ul>
         </nav>
-        <nav>
+        <nav class="home__nav">
             <ul>
                 <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
                 <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
@@ -44,54 +46,77 @@
             <h2>Basado en tu última visita</h2>
             <article class="home__main__section__article">
                 <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex" width="100%">
-                <h3>$6.770</h3>
-                <h4>40% OFF</h4>
-                <h4>Cafetera Moulinex</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$6.770</h3>
+                    <h4>40% OFF</h4>
+                    <h4 class="home__main__producto">Cafetera Moulinex</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book" width="100%">
-                <h3>$230.000</h3>
-                <h4>20% off</h4>
-                <h4>MacBook Pro 2019</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$230.000</h3>
+                    <h4>20% off</h4>
+                    <h4 class="home__main__producto">MacBook Pro 2019</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10" width="100%">
-                <h3>$70.500</h3>
-                <h4>10% off</h4>
-                <h4>Samsung Galaxy S10</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$70.500</h3>
+                    <h4>10% off</h4>
+                    <h4 class="home__main__producto">Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung" width="100%">
-                <h3>$23.200</h3>
-                <h4>5% off</h4>
-                <h4>SmartTv Samsung 43"</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$23.200</h3>
+                    <h4>5% off</h4>
+                    <h4 class="home__main__producto">SmartTv Samsung 43"</h4>
+                </div>
             </article>
         </section>
         <section class="home__main__section">
             <h2>Sección de Ofertas</h2>
             <article class="home__main__section__article">
                 <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex" width="100%">
-                <h3>$6.770</h3>
-                <h4>40% OFF</h4>
-                <h4>Cafetera Moulinex</h4>
+                <div class="home__main__article-div"><i class="fa-solid fa-truck"></i>
+                    <h3>$6.770</h3>
+                    <h4>40% OFF</h4>
+                    <h4 class="home__main__producto">Cafetera Moulinex</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book" width="100%">
-                <h3>$230.000</h3>
-                <h4>20% off</h4>
-                <h4>MacBook Pro 2019</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$230.000</h3>
+                    <h4>20% off</h4>
+                    <h4 class="home__main__producto">MacBook Pro 2019</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10" width="100%">
-                <h3>$70.500</h3>
-                <h4>10% off</h4>
-                <h4>Samsung Galaxy S10</h4>
+                <div class="home__main__article-div">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>$70.500</h3>
+                    <h4>10% off</h4>
+                    <h4 class="home__main__producto">Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article class="home__main__section__article">
                 <img src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung" width="100%">
-                <h3>$23.200</h3>
-                <h4>5% off</h4>
-                <h4>SmartTv Samsung 43"</h4>
+                <div class="home__main__article-div"> <i class="fa-solid fa-truck"></i>
+                    <h3>$23.200</h3>
+                    <h4>5% off</h4>
+                    <h4 class="home__main__producto">SmartTv Samsung 43"</h4>
+                </div>
+
             </article>
         </section>
     </main>
