--- a/public/css/general.css
+++ b/public/css/general.css
@@ -17,22 +17,5 @@
     margin: 0;
     padding: 0;
     color: #000;
-}
-
-
-h2{
-    font-size: 24px;
-    margin-bottom: 30px 0px;
-}
-
-h3{
-    font-size: 18px;
-}
-
-h4{
-    font-size: 16px;
-}
-
-p{
-    font-size: 12px;
+    box-sizing: border-box;
 }
