--- a/views/home.html
+++ b/views/home.html
@@ -11,29 +11,31 @@
 
 <body class="body">
     <header class="header">
-            <section class="home__header">
-                <a class="header__logo" href="#"><img class="logo" src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre"></a>
-                <form class="header__seach" action="">
-                    <input class="header_input" type="text" placeholder="Buscar productos, marcas" id="search">
-                </form>
-                <div class="header__cuotas">
-                <p> 
-                    <i class="fa-solid fa-hand-holding-dollar"></i> 
-                    Comprá en cuotas y sin tarjeta de crédito</p>
-            </section>
-            <nav class="header__nav">
-                <ul class="header__nav__ul">
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Tiendas Oficiales</a></li>
-                    <li><a href="">Vender</a></li>
-                    <li><a href="">Ayuda</a></li>
-                </ul>
-                <ul class="header__nav__ul">
-                    <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
-                    <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
-                    <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
-                </ul>
-            </nav>
+        <section class="home__header">
+            <a class="header__logo" href="#"><img class="logo" src="/img/logo-mercado-liebre.svg"
+                    alt="Logo de mercado Liebre"></a>
+            <form class="header__seach" action="">
+                <input class="header_input" type="text" placeholder="Buscar productos, marcas" id="search">
+            </form>
+            <div class="header__cuotas">
+                <p>
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                    Comprá en cuotas y sin tarjeta de crédito
+                </p>
+        </section>
+        <nav class="header__nav">
+            <ul class="header__nav__ul">
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas Oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
+            </ul>
+            <ul class="header__nav__ul">
+                <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
+                <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+        </nav>
         </div>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -43,12 +45,12 @@
         <div class="Banner">
             <a href="#"><img src="/img/img-home-banner.jpg" alt="Banner" class="banner"></a>
         </div>
+        <div>
+            <h2 class="ultima-vista">Basado en tu última visita</h2>
+        </div>
         <section class="home__main__section">
-            <div>
-                <h2 class="ultima-vista">Basado en tu última visita</h2>
-            </div>
             <article class="home__main__section__article">
-                <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex" >
+                <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -60,7 +62,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book" >
+                <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -96,10 +98,10 @@
                 </div>
             </article>
         </section>
-        <section>
-            <div>
-                <h2 class="seccion-ofertas">Sección de Ofertas</h2>
-            </div>
+        <div>
+            <h2 class="seccion-ofertas">Sección de Ofertas</h2>
+        </div>
+        <section class="home__main__section">
             <article class="home__main__section__article">
                 <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
                 <div class="product-texto">
@@ -155,7 +157,7 @@
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-credit-card" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4>Pagá con tarjeta o en efectivo</h4>
                         <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                             puntos de pago. ¡Y siempre es seguro!</p>
@@ -165,7 +167,7 @@
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-gift" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4>Envío gratis desde $ 2.500</h4>
                         <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                             productos. Es un beneficio de Mercado Puntos.</p>
@@ -175,7 +177,7 @@
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-user-shield" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4> Seguridad, de principio a fin</h4>
                         <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                             porque estás siempre protegid@</p>
@@ -184,8 +186,9 @@
             </div>
         </div>
     </footer>
-        <div class="copyright">
-            <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
-        </div>
-    </body>
-    </html>
+    <div class="copyright">
+        <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+    </div>
+</body>
+
+</html>
