--- a/views/home.html
+++ b/views/home.html
@@ -31,8 +31,8 @@
                 <li><a href="">Ayuda</a></li>
             </ul>
             <ul class="header__nav__ul">
-                <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
-                <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li><a href="/register">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
