--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
 <body class="body">
     <header class="header">
             <section class="home__header">
-                <a class="header__logo" href="#"><img class="logo" src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre"></a>
+                <a class="header__logo" href="/"><img class="logo" src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre"></a>
                 <form class="header__seach" action="">
                     <input class="header_input" type="text" placeholder="Buscar productos, marcas" id="search">
                 </form>
@@ -29,8 +29,8 @@
                     <li><a href="">Ayuda</a></li>
                 </ul>
                 <ul class="header__nav__ul">
-                    <li><a href="">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
-                    <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                    <li><a href="/register">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
+                    <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
                     <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </nav>
