se esta aplicando flex y css a las rutas login y register

--- a/views/login.html
+++ b/views/login.html
@@ -39,6 +39,23 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
+    <main class="main_login">
+        <form action="">
+            <section>
+                <article class="article_main_login">
+                    <label for="usuario"></label>
+                    <input class="input_login" type="email" placeholder="Nombre de usuario" required>
+                </article>
+                <article class="article_main_login">
+                    <label for="contraseña"></label>
+                    <input class="input_login" type="password" placeholder="Elegi tu contraseña" required>
+                </article>
+                <article class="article_main_login">
+                    <button class="button_main_login" type="submit">ENVIAR</button>
+                </article>
+            </section>
+        </form>
+    </main>
     <footer class="footer">
         <div class="footer">
             <div class="footer-txt">
