--- a/views/register.html
+++ b/views/register.html
@@ -11,40 +11,122 @@
 
 <body class="body">
     <header class="header">
-            <section class="home__header">
-                <a class="header__logo" href="/"><img class="logo" src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre"></a>
-                <form class="header__seach" action="">
-                    <input class="header_input" type="text" placeholder="Buscar productos, marcas" id="search">
-                </form>
-                <div class="header__cuotas">
-                <p> 
-                    <i class="fa-solid fa-hand-holding-dollar"></i> 
-                    Comprá en cuotas y sin tarjeta de crédito</p>
-            </section>
-            <nav class="header__nav">
-                <ul class="header__nav__ul">
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Tiendas Oficiales</a></li>
-                    <li><a href="">Vender</a></li>
-                    <li><a href="">Ayuda</a></li>
-                </ul>
-                <ul class="header__nav__ul">
-                    <li><a href="/register">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
-                    <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
-                    <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
-                </ul>
-            </nav>
+        <section class="home__header">
+            <a class="header__logo" href="/"><img class="logo" src="/img/logo-mercado-liebre.svg"
+                    alt="Logo de mercado Liebre"></a>
+            <form class="header__seach" action="">
+                <input class="header_input" type="text" placeholder="Buscar productos, marcas" id="search">
+            </form>
+            <div class="header__cuotas">
+                <p>
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                    Comprá en cuotas y sin tarjeta de crédito
+                </p>
+        </section>
+        <nav class="header__nav">
+            <ul class="header__nav__ul">
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas Oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
+            </ul>
+            <ul class="header__nav__ul">
+                <li><a href="/register">Crea tu cuenta <i class="fa-solid fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li><a href="">Mis compras <i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+        </nav>
         </div>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
     </header>
+    <main>
+        <form class="main_registro" accion="/login" method="post">
+            <section>
+                <h4 class="datos_usario">Datos Personales</h4>
+                <article class="article_registro_main">
+                    <label for="nombre"></label>
+                    <input class="imput_register" type="text" name="nombre" id="nombre" placeholder="Nombre y apellido"
+                        required>
+                </article>
+                <article class="article_registro_main">
+                    <label for="nombre de usuario"></label>
+                    <input class="imput_register" type="text" name="nombre de usuario" id="usuario"
+                        placeholder="Nombre de usuario">
+                </article>
+                <article class="article_registro_main">
+                    <label for="email"></label>
+                    <input class="imput_register" type="email" name="email" id="email" placeholder="Email" required>
+                </article>
+            </section>
+            <section>
+                <article class="article_registro_main">
+                    <h4 class="datos_usario">Fecha de Nacimiento</h4>
+                    <label for="fecha de nacimiento"></label>
+                    <input class="imput_register" type="date" name="fecha">
+                </article>
+                <article class="article_registro_main">
+                    <label for="domicilo"></label>
+                    <input class="imput_register" type="text" name="domicilo" id="domicilo" placeholder="Domicilio">
+                </article>
+                <article class="article_registro_main caja-flex">
+                    <h4 class="datos_usario">Perfil de Usuario</h4>
+                    <label for="usario">Comprador</label>
+                    <input type="radio" name="usuario" value="comprador" >
+                    <label for="usario">Vendedor</label>
+                    <input type="radio" name="usuario" value="vendedor">
+
+
+                </article>
+            </section>
+            <section>
+                <article class="article_registro_main caja-flex" id="">
+                    <h4 class="datos_usario">Interes</h4>
+                    <label for="Electro">Electro</label>
+                    <input type="checkbox" name="interes" id="Electro">
+                    <label for="Moda">Moda</label>
+                    <input type="checkbox" name="interes" id="Moda">
+                    <label for="Hogar">Hogar</label>
+                    <input type="checkbox" name="interes" id="Hogar">
+                    <label for="Jugueteria">Jugueteria</label>
+                    <input type="checkbox" name="interes" id="Jugueteria">
+                    <label for="Vida-Sana">Vida Sana</label>
+                    <input type="checkbox" name="interes" id="Vida-Sana">
+                </article>
+            </section>
+            <section>
+                <article class="article_registro_main">
+                    <h4 class="datos_usario">Imagen de usuario</h4>
+                    <label for="Selecciona una foto de perfil:"></label>
+                    <input type="file" name="foto" accept="image/*">
+                </article>
+            </section>
+            <section>
+                <article class="article_registro_main">
+                    <h4 class="datos_usario">Seguridad</h4>
+                    <label for="contraseña"></label>
+                    <input class="imput_register" type="password" name="contraseña" id="contraseña"
+                        placeholder="Contraseña" required>
+                </article>
+                <article class="article_registro_main">
+                    <label for="confirma-contraseña"></label>
+                    <input class="imput_register" type="password" name="confirma-contraseña" id="confirma-contraseña"
+                        placeholder="Confirmar contraseña" required>
+                </article>
+            </section>
+            <article class="article_registro_main">
+                <button class="button_enviar_registro" type="submit">ENVIAR</button>
+                <button type="reset" class="button_reset_registro">BORRAR</button>
+            </article>
+        </form>
+    </main>
     <footer class="footer">
         <div class="footer container">
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-credit-card" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4>Pagá con tarjeta o en efectivo</h4>
                         <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                             puntos de pago. ¡Y siempre es seguro!</p>
@@ -54,7 +136,7 @@
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-gift" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4>Envío gratis desde $ 2.500</h4>
                         <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                             productos. Es un beneficio de Mercado Puntos.</p>
@@ -64,7 +146,7 @@
             <div class="footer-txt">
                 <i class="icono-footer fa-solid fa-user-shield" style="color: #1259c3;"></i>
                 <ul type="none">
-                    <li> 
+                    <li>
                         <h4> Seguridad, de principio a fin</h4>
                         <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                             porque estás siempre protegid@</p>
@@ -73,8 +155,9 @@
             </div>
         </div>
     </footer>
-        <div class="copyright">
-            <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
-        </div>
-    </body>
-    </html>
+    <div class="copyright">
+        <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+    </div>
+</body>
+
+</html>
