--- a/views/register.html
+++ b/views/register.html
@@ -70,29 +70,41 @@
                     <label for="domicilo"></label>
                     <input class="imput_register" type="text" name="domicilo" id="domicilo" placeholder="Domicilio">
                 </article>
-                <article class="article_registro_main caja-flex">
-                    <h4 class="datos_usario">Perfil de Usuario</h4>
-                    <label for="usario">Comprador</label>
-                    <input type="radio" name="usuario" value="comprador" >
-                    <label for="usario">Vendedor</label>
-                    <input type="radio" name="usuario" value="vendedor">
-
-
+                <h4 class="datos_usario">Perfil de Usuario</h4>
+                <article class="article_perfil_usuario">
+                    <div>
+                        <label for="usario">Comprador</label>
+                        <input type="radio" name="usuario" value="comprador">
+                    </div>
+                    <div>
+                        <label for="usario">Vendedor</label>
+                        <input type="radio" name="usuario" value="vendedor">
+                    </div>
                 </article>
             </section>
             <section>
-                <article class="article_registro_main caja-flex" id="">
+                <article class="article_form_main">
                     <h4 class="datos_usario">Interes</h4>
-                    <label for="Electro">Electro</label>
-                    <input type="checkbox" name="interes" id="Electro">
-                    <label for="Moda">Moda</label>
-                    <input type="checkbox" name="interes" id="Moda">
-                    <label for="Hogar">Hogar</label>
-                    <input type="checkbox" name="interes" id="Hogar">
-                    <label for="Jugueteria">Jugueteria</label>
-                    <input type="checkbox" name="interes" id="Jugueteria">
-                    <label for="Vida-Sana">Vida Sana</label>
-                    <input type="checkbox" name="interes" id="Vida-Sana">
+                    <div>
+                        <input type="checkbox" name="interes" id="Electro">
+                        <label for="Electro">Electro</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="interes" id="Moda">
+                        <label for="Moda">Moda</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="interes" id="Hogar">
+                        <label for="Hogar">Hogar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="interes" id="Jugueteria">
+                        <label for="Jugueteria">Jugueteria</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="interes" id="Vida-Sana">
+                        <label for="Vida-Sana">Vida Sana</label>
+                    </div>
                 </article>
             </section>
             <section>
