--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,7 +32,15 @@
 .home__main__section__article{
     background-color: var(--color-blanco);
     margin-bottom: 15px;
+    
 }
+.home__main__section__article :hover{
+    .modelo-txt{
+        opacity: 1;
+        transition: all 500ms;
+        }
+}
+
 
 .home__main__section__article img {
     width: 100%;
@@ -50,6 +58,11 @@
     position: absolute;
     right:15px;
     bottom: 73px;
+    transition: transform 1.5s;
+}
+
+.fa-truck:hover {
+    transform: rotate(-360deg);
 }
 
 .fa-circle{
@@ -80,32 +93,9 @@
     color: var(--color-grisOscuro);
     font-size: 16px;
     margin: 0px;
+    opacity: 0;
+    transition: 0.5s;
 }
-
-.footer {
-    width: 100%;
-    padding: 20px;
-    background-color: var(--color-blanco);
-}
-
-.footer-txt{
-    text-align: center;
-    padding: 20px;
-    font-size: 12px;
-}
-
-.icono-footer{
-    font-size: 2em;
-    margin-bottom: 10px;
-}
-
-.copyright{
-    background-color:var(--color-blanco);
-    text-align: center;
-    padding-bottom: 10px;
-}
-
-
 @media  (min-width: 768px){ 
 .banner{
     width: 100%;
@@ -123,18 +113,13 @@ width: 45%;
 }
 .home__main__section__article{
     margin: 15px;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-}
-.footer{
-    display: flex;
-}
-.copyright{
-    display: block;
-    text-align: left;
-    padding-left: 20px;
-}
+    transition: all 500ms;
 }
 
+}
+.home__main__section__article:hover{
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
 
 @media  (min-width: 1024px){
 .home__main__section{
@@ -145,13 +130,16 @@ width: 45%;
 }
 .home__main__section__article{
 width: 22%;
+transition: all 500ms;
+}
 
+}
+.home__main__section__article:hover{
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 .header__cuotas{
     font-size: 1.5vw;
 }
 .header_input{
     width: 25vw;
-}
-
 }
