--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 @import "./general.css";
 @import "./header.css";
 @import "./home.css";
+@import "./footer.css";
 @import "./login.css";
 @import "./register.css";
