--- a/views/home.html
+++ b/views/home.html
@@ -50,7 +50,7 @@
         </div>
         <section class="home__main__section">
             <article class="home__main__section__article">
-                <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
+                <img class="producto-img" src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -62,7 +62,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book">
+                <img class="producto-img" src="/img/img-macbook-pro-2019.jpg" alt="Mac Book">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -74,7 +74,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
+                <img class="producto-img" src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -86,7 +86,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung">
+                <img class="producto-img" src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -103,7 +103,7 @@
         </div>
         <section class="home__main__section">
             <article class="home__main__section__article">
-                <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
+                <img class="producto-img" src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Molinex">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -115,7 +115,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-macbook-pro-2019.jpg" alt="Mac Book">
+                <img class="producto-img" src="/img/img-macbook-pro-2019.jpg" alt="Mac Book">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -127,7 +127,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
+                <img class="producto-img" src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -139,7 +139,7 @@
                 </div>
             </article>
             <article class="home__main__section__article">
-                <img src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung">
+                <img class="producto-img" src="/img/img-tv-samsung-smart.jpg" alt="TV Samsung">
                 <div class="product-texto">
                     <i class="fa-regular fa-circle" style="color: #12c427;"></i>
                     <i class="fa-solid fa-truck" style="color: #12c427;"></i>
@@ -155,7 +155,7 @@
     <footer class="footer">
         <div class="footer container">
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-credit-card" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-credit-card" ></i>
                 <ul type="none">
                     <li>
                         <h4>Pagá con tarjeta o en efectivo</h4>
@@ -165,7 +165,7 @@
                 </ul>
             </div>
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-gift" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-gift" ></i>
                 <ul type="none">
                     <li>
                         <h4>Envío gratis desde $ 2.500</h4>
@@ -175,7 +175,7 @@
                 </ul>
             </div>
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-user-shield" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-user-shield" ></i>
                 <ul type="none">
                     <li>
                         <h4> Seguridad, de principio a fin</h4>
