--- a/views/login.html
+++ b/views/login.html
@@ -59,7 +59,7 @@
     <footer class="footer">
         <div class="footer">
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-credit-card" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-credit-card"></i>
                 <ul type="none">
                     <li> 
                         <h4>Pagá con tarjeta o en efectivo</h4>
@@ -69,7 +69,7 @@
                 </ul>
             </div>
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-gift" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-gift"></i>
                 <ul type="none">
                     <li> 
                         <h4>Envío gratis desde $ 2.500</h4>
@@ -79,7 +79,7 @@
                 </ul>
             </div>
             <div class="footer-txt">
-                <i class="icono-footer fa-solid fa-user-shield" style="color: #1259c3;"></i>
+                <i class="icono-footer fa-solid fa-user-shield"></i>
                 <ul type="none">
                     <li> 
                         <h4> Seguridad, de principio a fin</h4>
